# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")

ohos_shared_library("cardemulation") {
  defines = [ "DEBUG" ]
  install_enable = true
  include_dirs = [
    "//foundation/communication/nfc/interfaces/inner_api/include",
    "//foundation/communication/nfc/interfaces/inner_api/include/cardEmulation",
    "//base/notification/common_event_service/frameworks/core/include",
  ]

  sources = [
    "nfc_napi_cardEmulation.cpp",
    "nfc_napi_cardEmulation_adapter.cpp",
  ]

  deps =
      [ "//foundation/communication/nfc/interfaces/inner_api:nfc_inner_kits" ]

  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "napi:ace_napi",
  ]

  relative_install_dir = "module/nfc"
  part_name = "nfc"
  subsystem_name = "communication"
}
