# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import("../../../../nfc.gni")

ohos_shared_library("cardemulation") {
  sanitize = {
    cfi = true
    boundary_sanitize = true
    integer_overflow = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"
  defines = [ "DEBUG" ]
  install_enable = true
  include_dirs = [
    "$NFC_DIR/interfaces/inner_api/cardEmulation",
    "//base/notification/common_event_service/frameworks/core/include",
    "$NFC_DIR/frameworks/js/napi/common",
  ]

  sources = [
    "$NFC_DIR/frameworks/js/napi/common/nfc_napi_common_utils.cpp",
    "nfc_napi_cardEmulation.cpp",
    "nfc_napi_cardEmulation_adapter.cpp",
    "nfc_napi_hce_adapter.cpp",
  ]

  deps = [
    "$NFC_DIR/interfaces/inner_api/cardEmulation:nfc_inner_kits_card_emulation",
    "$NFC_DIR/interfaces/inner_api/common:nfc_inner_kits_common",
  ]

  external_deps = [
    "ability_base:want",
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "napi:ace_napi",
  ]

  relative_install_dir = "module/nfc"
  part_name = "nfc"
  subsystem_name = "communication"
}
