# Copyright (c) 2022 Shenzhen Kaihong Digital Industry Development Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")

ohos_shared_library("tag") {
  defines = [ "DEBUG" ]
  install_enable = true
  include_dirs = [
    "//foundation/communication/nfc/interfaces/inner_api/include",
    "//foundation/communication/nfc/interfaces/inner_api/include/tags",
  ]

  sources = [
    "nfc_napi_ndef_message.cpp",
    "nfc_napi_tag.cpp",
    "nfc_napi_tag_isodep.cpp",
    "nfc_napi_tag_mifare_classic.cpp",
    "nfc_napi_tag_mifare_ul.cpp",
    "nfc_napi_tag_ndef.cpp",
    "nfc_napi_tag_ndef_formatable.cpp",
    "nfc_napi_tag_sesstion.cpp",
    "nfc_napi_tag_utils.cpp",
    "nfc_napi_taga.cpp",
    "nfc_napi_tagb.cpp",
    "nfc_napi_tagf.cpp",
    "nfc_napi_tagv.cpp",
  ]

  deps =
      [ "//foundation/communication/nfc/interfaces/inner_api:nfc_inner_kits" ]

  external_deps = [
    "ability_base:want",
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "ipc_js:rpc",
    "napi:ace_napi",
    "samgr:samgr_proxy",
  ]

  relative_install_dir = "module/nfc"
  part_name = "nfc"
  subsystem_name = "communication"
}
