# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import("../../../../nfc.gni")

config("nci_native_vendor_config") {
  visibility = [ ":*" ]
}

ohos_shared_library("nfc_nci_native_vendor") {
  sanitize = {
    cfi = true
    boundary_sanitize = true
    integer_overflow = true
    cfi_cross_dso = true
    debug = false
  }
  stack_protector_ret = true
  sources = [
    "nci_ce_impl_vendor.cpp",
    "nci_nfcc_impl_vendor.cpp",
    "nci_tag_impl_vendor.cpp",
  ]

  public_configs = [ ":nci_native_vendor_config" ]

  deps = [ "$NFC_DIR/interfaces/inner_api/common:nfc_inner_kits_common" ]

  external_deps = [
    "ability_base:want",
    "nfc_ext_service:nci_native_vendor",
  ]

  part_name = "nfc"
  subsystem_name = "communication"
}
