# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/test.gni")
import("//foundation/communication/nfc/test/utils/utils.gni")
import("../../../../../nfc.gni")
import("../../../nfcfuzz.gni")

ohos_fuzztest("HceSessionStubFuzzTest") {
  module_out_path = fuzz_module_out_path

  fuzz_config_file = "$NFC_DIR/test/fuzztest/cardemulation_test/hcesessionstub/hcesessionstub_fuzzer"

  include_dirs = fuzz_include_dirs
  include_dirs += [ "$nfc_test_utils_path" ]

  cflags = fuzz_cflags

  sources = [ "hcesessionstub_fuzzer.cpp" ]

  deps = fuzz_deps
  deps += [ "$nfc_test_utils_path:test_utils_static" ]

  external_deps = fuzz_external_deps
}

group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":HceSessionStubFuzzTest",
  ]
}
