# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/test.gni")
import("../../../../../nfc.gni")

ohos_fuzztest("NdefMessageFuzzTest") {
  module_out_path = fuzz_module_out_path
  fuzz_config_file =
      "$NFC_DIR/test/fuzztest/tags_test/ndefmessage/ndefmessage_fuzzer"
  include_dirs = [
    "$NFC_DIR/interfaces/inner_api/common",
    "$NFC_DIR/interfaces/inner_api/controller",
    "$NFC_DIR/interfaces/inner_api/tags",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [ "ndefmessage_fuzzer.cpp" ]

  deps = [
    "$NFC_DIR/interfaces/inner_api/common:nfc_inner_kits_common",
    "$NFC_DIR/interfaces/inner_api/controller:nfc_inner_kits_controller",
    "$NFC_DIR/interfaces/inner_api/tags:nfc_inner_kits_tags",
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:ability_manager",
    "ability_runtime:app_manager",
    "ability_runtime:dataobs_manager",
    "c_utils:utils",
    "data_share:datashare_consumer",
    "hilog:libhilog",
    "ipc:ipc_core",
  ]
}

group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":NdefMessageFuzzTest",
  ]
}
